--- a/src/Server/package.json
+++ b/src/Server/package.json
@@ -7,6 +7,7 @@
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
+    "firebase": "^9.15.0",
     "handlebars": "^4.7.7",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.3.0",
