--- a/src/Server/package.json
+++ b/src/Server/package.json
@@ -1,21 +1,30 @@
 {
+  "name": "server",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
+  "scripts": {
+    "start": "nodemon --inspect Source/server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
-    "body-parser": "^1.20.1",
     "connect-flash": "^0.1.1",
-    "crypto-js": "^4.1.1",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
     "firebase": "^9.15.0",
     "handlebars": "^4.7.7",
     "multer": "^1.4.5-lts.1",
-    "node-fetch": "^3.3.0",
-    "nodemon": "^2.0.20",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
-    "pg-promise": "^10.15.2"
+    "pg-promise": "^10.15.4"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
