--- a/src/Server/package.json
+++ b/src/Server/package.json
@@ -16,6 +16,7 @@
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
     "firebase": "^9.15.0",
+    "firebase-admin": "^11.4.0",
     "handlebars": "^4.7.7",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
