Add UI for employer

--- a/src/server_candidate/package.json
+++ b/src/server_candidate/package.json
@@ -1,7 +1,6 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
   "main": "Source/server.js",
   "scripts": {
     "start": "nodemon --inspect Source/server.js",
@@ -27,5 +26,6 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
-  }
+  },
+  "description": ""
 }
