--- a/src/server_candidate/package.json
+++ b/src/server_candidate/package.json
@@ -19,6 +19,7 @@
     "handlebars": "^4.7.7",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
+    "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
