--- a/src/server_candidate/package.json
+++ b/src/server_candidate/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "connect-flash": "^0.1.1",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
@@ -18,6 +19,7 @@
     "firebase-admin": "^11.4.0",
     "handlebars": "^4.7.7",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.8.0",
     "passport": "^0.6.0",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
